--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px auto;
+
 }
 
 .featured-projects{
@@ -10,6 +12,7 @@
     width: 100%;
     height: 100%;
     margin-bottom: 50px;
+    min-width: 750px;
 }
 
 .featured-projects h1{
@@ -179,5 +182,86 @@
     }
     to{
         opacity: 0;
+    }
+}
+
+
+
+
+@media (max-width: 1024px){
+    .featured-projects{
+        scale: 0.8;
+        margin-top: -100px;
+    }
+    .other-projects{
+        scale: 0.7;
+        margin-top: -400px;
+    }
+}
+
+@media (max-width: 768px){
+    .featured-projects{
+        scale: 0.7;
+        margin-top: -200px;
+    }
+    .project-container, .project2-container{
+        display: flex;
+        flex-direction: column;
+        margin: 0px 0px;
+    }
+    .project2-container{
+        margin-top: 150px;
+    }
+    .project-container2{
+        display: flex;
+        justify-content: center;
+        margin-left: 50px;
+    }
+    .project-container3{
+        display: flex;
+        justify-content: center;
+        margin-left: 150px;
+        width: 500px;
+    }
+    .featured-projects h1{
+        scale: 0.8;
+        margin-top: -100px;
+    }
+    .other-projects{
+        scale: 0.7;
+        margin-top: -800px;
+    }
+    .other-projects h1{
+        scale: 0.8;
+
+    }
+    .project-container-description{
+        margin-left: 0px;
+        padding: 25px;
+        border-radius: 10px;
+        width: 600px;
+    }
+    .other-project-container-description{
+        width: 600px;
+    }
+    .project-container-icon{
+        margin-top: 0px;
+    }
+    .project-image img{
+        height: 400px;
+    }
+    .project-image-right img{
+        height: 400px;
+        margin-left: 50px;
+    }
+    .other-projects.project-image img{
+        height: 300px;
+        margin-left: 100px;
+    }
+    .other-project-1, .other-project-3{
+        margin-left: 100px
+    }
+    .other-project-2 .project-container, .other-project-4 .project-container {
+        flex-direction: column-reverse;
     }
 }
