--- a/index.css
+++ b/index.css
@@ -128,6 +128,7 @@ body{
 #main-container{
     display: flex;
     flex-direction: column;
+    width: 100vw;
 }
 
 #main-page{
@@ -172,6 +173,7 @@ body{
     margin-top: auto;
     background: #20203b;
     color:white;
+    width: 100%;
 }
 
 
@@ -566,10 +568,10 @@ body{
     }
     #copyright{
         margin-top: 15px;
-        scale: 0.8;
+        scale: 0.65;
     }
     #author{
-        scale: 0.8;
+        scale: 0.65;
     }
     #author-name{
         display: none;
@@ -577,8 +579,11 @@ body{
     }
     #icons{
         margin-bottom: -40px;
-        scale: 0.8;
+        scale: 0.65;
         display: flex;
         flex-direction: row;
+    }
+    #main-containter{
+        overflow-x: auto;
     }
 }
