Fixing about page look

--- a/About/about.css
+++ b/About/about.css
@@ -123,7 +123,6 @@
 
 #about-page-1 #about-right-text img{
     height: 250px;
-
 }
 
 #about-right-text img, #resume-button img{
@@ -224,14 +223,48 @@
         scale: 0.7;
         margin-top: 50px;
         margin-bottom: 0px;
-        max-width: 600px;
-        min-width: 550px;
+        max-width: 450px;
+        min-width: 450px;
         padding-left: 50px;
+    }
+    #about-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #about-page-2 #about-content{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+    #about-left-text, #about-left-text2, #about-left-text3{
+        width: 100%;
+    }
+
+    #about-left-text3{
+        margin-bottom: 50px;
+    }
+
+    #about-right-text img{
+        height: 150px;
+        margin-top: 20px;
+        opacity: 0;
+        animation-delay: 4.0s;
     }
     .add-blue-line{
         display: block;
     }
-    #about-page-2 #about-right-text img{
-        margin-top: 50px;
+    #about-page-1 #about-right-text img{
+        height: 200px;
+        margin-top: 20px;
+        margin-bottom: -20px;
+        opacity: 0;
+        animation-delay: 2.5s;
+    }
+    #resume-button {
+        display: none;
     }
 }
