--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -6,18 +6,20 @@
     top: 200px;
     bottom: 200px;
     height: 50%;
-    width: 60%;
-    min-height: 400px;
-    min-width: 800px;
+    width: 80%;
+    /* min-height: 400px;
+    min-width: 800px; */
     margin-bottom: 100px;
 }
 
-#blog-header{
-    font-size: 1.2em;
-
+.blog-header{
+    font-size: 1.4em;
+    margin-bottom: 50px;
+    padding-left: 10%;
+    border-bottom: 4px solid rgb(160, 152, 152)
 }
 
-#blog-content{
+.blog-content{
     display: flex;
     justify-content: space-between;
     margin: 20px 00px;
@@ -72,17 +74,11 @@
 
 .blog-latest-post img{
     object-fit: cover;
-
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 10px;
 }
 
-.blog-latest-post a{
-    font-size: 1.1rem;
-    font-weight: bold;
-    padding: 10px;
-}
 
 .blog-latest-post button{
     width: fit-content;
@@ -100,6 +96,19 @@
     opacity: 0.8;
 }
 
+.blog-content-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-content-container a{
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 10px;
+}
+
+
+
 .blog-title{
     border-bottom: 1px solid grey;
     margin: 10px;
@@ -112,12 +121,11 @@
 
 }
 
-.blog-content{
+.blog-content-preview{
     font-size: 0.9rem;
     text-align: start;
     padding: 0px 20px;
     width: 100%;
-
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -148,4 +156,39 @@
         opacity: 0;
 
     }
+}
+
+@media (max-width: 1024px){
+    .blog-latest-post{
+        flex-direction: row;
+        border: none;
+        box-shadow: none;
+        margin-bottom: 50px;
+    }
+    .blog-content{
+        flex-direction: column;
+    }
+    .blog-latest-post img{
+        width: 250px;
+        height: 200px;
+        margin-right: 50px;
+    }
+    .blog-content-preview{
+        -webkit-line-clamp: 3;
+    }
+    .blog-latest-post button{
+        margin-top: 10px;
+        padding: 2px 20px;
+        border-radius: 10px;
+        font-size: 0.8rem;
+        color:white;
+        background: rgb(57, 84, 119);
+    }
+    .popular-posts{
+        opacity: 1;
+    }
+}
+
+@media (max-width: 768px){
+
 }
