Fixed mobile responsiveness

--- a/About/about.css
+++ b/About/about.css
@@ -270,4 +270,8 @@
     #resume-button {
         display: none;
     }
+    #about-header{
+        font-size: 0.8rem;
+        margin-bottom: -8px;
+    }
 }
