--- a/About/about.css
+++ b/About/about.css
@@ -4,8 +4,8 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif; 
-
 }
+
 
 #about-main-wrapper{
     display: flex;
@@ -13,7 +13,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 100px;
-    margin-top: 150px;
+    margin-top: 200px;
     width: 700px;
     font-size: 1.2rem;
     padding-left: 100px;
@@ -24,6 +24,7 @@
     position: relative;
     overflow: hidden;
     line-height: 1.45;
+    background-color: white;
 }
 
 #about-header{
@@ -90,7 +91,6 @@
     position: absolute;
     left: 0%;
     margin-top: 110px;
-    z-index: -1;
 }
 
 .blue-line{
