--- a/About/about.css
+++ b/About/about.css
@@ -7,6 +7,22 @@
 }
 
 
+body::before{
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../Assets/background-1.png");
+    /* background: url("../Assets/blue-bg.jpg"); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    z-index: -10;
+}
+
 #about-main-wrapper{
     display: flex;
     flex-direction: column;
@@ -25,6 +41,7 @@
     overflow: hidden;
     line-height: 1.45;
     background-color: white;
+
 }
 
 #about-header{
@@ -90,7 +107,8 @@
 .blue-lines{
     position: absolute;
     left: 0%;
-    margin-top: 110px;
+    margin-top: 110px;   
+    pointer-events: none; 
 }
 
 .blue-line{
@@ -108,11 +126,6 @@
 #resume-button a{
     color: white;
     text-decoration: none;
-}
-
-#about-left-text a:hover{
-    color: rgb(216, 185, 185);
-    text-decoration: underline;
 }
 
 #about-page-2 #about-left-text{
