--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -1,3 +1,18 @@
+body::before{
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../Assets/background-1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    z-index: -10;
+}
+
 .blog-main-wrapper{
     margin-left: auto;
     margin-right: auto;
