--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -1,4 +1,18 @@
 /* Styling for contact.html */
+body::before{
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../Assets/background-1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    z-index: -10;
+}
 
 #contact-main-wrapper{
     margin-left: auto;
