--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -1,16 +1,32 @@
+body::before{
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../Assets/background-1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    z-index: -10;
+}
+
 #projects-main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0px auto;
+    margin-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .featured-projects{
     text-align: center;
     width: 100vw;
     height: 100%;
-
     min-width: 750px;
     margin-bottom: 50px;
 }
@@ -45,7 +61,6 @@
     display: flex;
     height: 100%;
     flex-direction: column;
-    /* flex: 40%; */
     transition: scale 0.2s;
 }
 
@@ -53,7 +68,7 @@
     display: flex;
     height: 100%;
     flex-direction: column;
-    flex: 40%;
+
     transition: scale 0.2s;
 }
 
@@ -113,7 +128,7 @@
 }
 
 .other-projects{
-    text-align: center;
+
     width: 100vw;
     height: 100%;
     min-width: 750px;
@@ -122,7 +137,7 @@
 
 .other-projects h1{
     text-align: center;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     margin-bottom: 50px;
 }
 
@@ -266,7 +281,6 @@
     .other-projects .project-image, .other-projects .project-image-right{
         margin: 0px;
     }
-
     .project-image-right img{
         width: 100%;
         height: auto;
@@ -276,7 +290,6 @@
     .other-project-2 .project-container, .other-project-4 .project-container {
         flex-direction: column-reverse;
     }
-
     .other-project-1, .other-project-2, .other-project-3{
         opacity: 1;
     }
