--- a/index.css
+++ b/index.css
@@ -8,10 +8,11 @@
 
 body{
     font-size: 16px;
-    height: 100%
+    height: 100%;
 }
 
-body::before{
+
+#index-main-main-container::before{
     content: "";
     display: block;
     position: fixed;
@@ -19,29 +20,34 @@ body::before{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("Assets/background-1.png");
+    background: url("/Assets/background-1.png");
+    background-size: cover;
     opacity: 0.8;
-    z-index: -10;
+
 }
 
-/* #main-container{
-    display: none;
-} */
-
+#index-main-container{
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: url("/Assets/blue-bg.jpg");
+    background-size: cover;
+    overflow: auto;
+}
 
 #nav{
-    display: flex;
+    display: none;
     position: fixed;
     justify-content: space-around;
     align-items: center;
-
     background: rgb(57, 84, 119);
     width: 100%;
     height: 70px;
     margin-top: 25px;
-    
     border-bottom: 1px solid black;
     box-shadow: 0 10px 15px -3px rgb(9, 12, 41);
+    animation: fade-in 0.5s ease-in;
     z-index: 5;
 }
 
@@ -79,7 +85,8 @@ body::before{
     /* text-decoration: underline white 2px; */
     background: #20203b;
     border-radius: 10px;
-    transition-duration: 1000ms;
+    transition-duration: 0.5s;
+    scale: 1.1;
 }
 
 
@@ -130,11 +137,6 @@ body::before{
     background: #20203b;
     border-radius: 10px;
     transition-duration: 1000ms;
-}
-
-#dummy-div{
-    display: flex;
-    min-height: 175px;
 }
 
 #main-container{
@@ -227,20 +229,34 @@ body::before{
 #icons{
     font-size: 1.2rem;
     padding: 10px;
-
 }
 
-#icons p{
+#index-icons{
+    display: none;
+    font-size: 1.2rem;
+    padding: 10px;
+    animation: fade-in 2s ease-in;
+}
+
+#index-icons{
+    margin-bottom: 100px;
+}
+
+#icons p, #index-icons p{
     padding: 5px;
     margin-bottom: 20px;
 }
 
-#icons a{
+#icons a, #index-icons a{
     text-decoration: none;
 }
 
-#icons a img{
+#icons a img, #index-icons a img{
     padding: 5px;
+}
+
+#icons img:hover, #index-icons img:hover{
+    scale: 1.2;
 }
 
 #copyright{
@@ -262,6 +278,116 @@ body::before{
     opacity: 0;
 }
 
+.index-main-page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.index-page-container{
+    position: absolute;
+    top: 25%;
+    margin: 0px auto;
+    color: white;
+    width: 50%;
+}
+
+.index-text1{
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+}
+
+.index-text2{
+    font-size: 3.0rem;
+    margin-bottom: 30px;
+}
+
+.index-text2-p1{
+    white-space: nowrap;
+    overflow: hidden;
+    font-family: monospace;
+    width: 14ch;
+    animation: 
+        cursor .5s step-end 5 alternate,
+        typing 1.5s steps(14);
+}
+
+.index-text2-p2{
+    opacity: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    font-family: monospace;
+    border-right: 5px solid rgb(247, 247, 247);
+    width: 26ch;
+    animation: 
+        cursor2 .5s step-end infinite alternate,
+        typing 1.5s steps(26) forwards;
+    animation-delay: 2.5s
+}
+
+
+.index-text3{
+    display: none;
+    width: 70%;
+    margin-bottom: 50px;
+    font-size: 1.3rem;
+    animation: slide-in2 1s ease-in;
+}
+
+@keyframes cursor {
+    50% { 
+        border-right: 5px solid rgb(247, 247, 247);
+    }
+}
+
+@keyframes cursor2{
+    50% { 
+        border-color: transparent;
+    }
+}
+
+@keyframes typing {
+    0%{
+        opacity: 1;
+    }
+    from {
+        width: 0
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.index-button{
+    display: none;
+    flex-direction: row;
+    animation: fade-in 1.0s ease-in;
+}
+
+.index-button a{
+    margin-right: 30px;
+    margin-bottom: 50px;
+}
+
+.index-button button{
+    padding: 5px 20px;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    border: none;
+    transition: 0.4s;
+    cursor: pointer;
+    white-space: nowrap
+}
+
+.index-button button:hover{
+    background: rgb(47, 47, 185);
+    color: white;
+    scale: 1.1;
+}
+
+
 @keyframes slide-out{
     from{
         transform: translateY(0%);
@@ -279,6 +405,17 @@ body::before{
         opacity: 0;
     }
     to{
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-in2{
+    0%{
+        transform: translateY(50%);
+        opacity: 0;
+    }
+    100%{
         transform: translateY(0%);
         opacity: 1;
     }
@@ -344,6 +481,8 @@ body::before{
     margin-bottom: 20px;
 }
 
+
+
 @keyframes load-page{
     20%{
         opacity: 20%;
@@ -383,86 +522,6 @@ body::before{
 #resume-button a{
     color: white;
     text-decoration: none;
-}
-
-#about-left-text a:hover{
-    color: rgb(216, 185, 185);
-    text-decoration: underline;
-}
-
-#about-page-2 #about-left-text{
-    padding: 20px;
-    width: 70%;
-    padding-left: 30px;
-}
-
-#about-page-1 #about-right-text img{
-    height: 250px;
-
-}
-
-#about-right-text img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    height: 200px;
-    padding: 10px;
-}
-
-#about-page-2 #about-right-text img{
-    margin-left: 20px;
-}
-
-#about-page-3 #about-right-text img{
-    margin-left: 20px;
-}
-
-#about-right-text p{
-    display: flex;
-    justify-content: center;
-    font-size: 0.8rem;
-
-}
-
-#about-page-1, #about-page-2, #about-page-3{
-    animation: fade-in 0.75s ease-in;
-}
-
-
-#resume-button img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    height: 200px;
-    padding: 10px;
-    margin-bottom: 15px;
-}
-
-#resume-button button{
-    display: flex;
-    margin: auto;
-    font-size: 0.8rem;
-    padding: 5px 5px;
-    color:white;
-    background: rgb(54, 169, 223);
-    border: none;
-    cursor:pointer;
-}
-
-#resume-button button:hover{
-    background: rgb(54, 121, 151);
-}
-
-#resume-button button img{
-   height: 15px;
-   padding: 0px;
-   margin: 0px 5px;
-}
-
-#contact-main-wrapper{
-    background-color: rgb(245, 242, 242);
 }
 
 @media (max-width: 1024px){
@@ -529,5 +588,33 @@ body::before{
     }
     #profile-pic p{
         scale: 0.8
+    }
+    .index-page-container{
+        width: 80%;
+        top: 15%;
+        left: 15%
+    }
+    .index-text1{
+        font-size: 1.0rem;
+    }
+    
+    .index-text2{
+        font-size: 1.5rem;
+
+    }
+    
+    .index-text3{
+        width: 80%;
+        margin-bottom: 50px;
+        font-size: 1.0rem;
+    }
+
+    .index-button button{
+        padding: 5px 10px;
+        font-size: 0.8rem;
+        border-radius: 10px;
+        border: none;
+        transition: 0.4s;
+        cursor: pointer;
     }
 }
