--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body{
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url("/Assets/blue-bg.jpg");
+    background: url("./blue-bg.jpg");
     background-size: cover;
     overflow: auto;
 }
