--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("/Assets/background-1.png");
+    background: url("./Assets/background-1.png");
     background-size: cover;
     opacity: 0.8;
 
@@ -31,7 +31,7 @@ body{
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url("blue-bg.jpg");
+    background: url("./Assets/blue-bg.jpg");
     background-size: cover;
     overflow: auto;
 }
