--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -54,7 +54,7 @@ body::before{
     min-width: 25%;
     flex-basis: 30%;
     text-align: center;
-    opacity: 0;
+    opacity: 1;
     animation-fill-mode: both;
 }
 
@@ -64,13 +64,15 @@ body::before{
 }
 
 .blog-latest-post:nth-child(2){
-    animation: fade-in 1.00s ease-in forwards;
+    animation: fade-in 1.00s ease-in;
     animation-delay: 0.5s;
+    animation-fill-mode: backwards;
 }
 
 .blog-latest-post:nth-child(3){
-    animation: fade-in 1.00s ease-in forwards;
+    animation: fade-in 1.00s ease-in;
     animation-delay: 1.0s;
+    animation-fill-mode: backwards;
 }
 
 .blog-latest-post:nth-child(4){
