--- a/index.css
+++ b/index.css
@@ -387,6 +387,157 @@ body{
     scale: 1.1;
 }
 
+.card {
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #353535;
+    font-size: 3rem;
+    color: #fff;
+    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(3, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+    height: 100%;
+    width: 100%;
+    border-radius: 4px;
+    transition: all 500ms;
+    overflow: hidden;
+    
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card:hover{
+    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.35rem 1.175rem, rgba(3, 8, 20, 0.1) 0px 0.175rem 0.5rem;
+    transform: translateY(-3px) scale(1.1);
+}
+
+.animated-grid-jw{
+    height: 10vmin;
+    width: 10vmin;
+    min-width: 100px;
+    min-height: 100px;
+    display: grid;
+    margin-right: 10px;
+    gap: 0.3rem;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    --stagger-delay: 100ms;
+}
+
+.animated-grid-jw2{
+    height: 10vmin;
+    width: 12vmin;
+    min-width: 100px;
+    min-height: 100px;
+    display: grid;
+    gap: 0.3rem;
+
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    --stagger-delay: 100ms;
+}
+
+@keyframes cardEntrance{
+    from{
+        opacity: 0;
+        transform: scale(0.3);
+        filter: hue-rotate(180deg)
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+        filter: hue-rotate(0deg)
+    }
+
+}
+
+.card{
+    background-color: rgb(36, 243, 147);
+    animation: cardEntrance 700ms ease-out;
+    animation-fill-mode: backwards;
+}
+
+.card2{
+    background-color: rgb(36, 243, 147);
+    animation: cardEntrance 700ms ease-out;
+    animation-fill-mode: backwards;
+}
+
+.card:nth-child(1){
+    animation-delay: calc(1 * var(--stagger-delay));
+}
+.card:nth-child(2){
+    animation-delay: calc(2 * var(--stagger-delay));    
+}
+.card:nth-child(3){
+    animation-delay: calc(3 * var(--stagger-delay));    
+}
+.card:nth-child(4){
+    animation-delay: calc(4 * var(--stagger-delay));    
+}
+.card:nth-child(7){
+    animation-delay: calc(5 * var(--stagger-delay));    
+}
+.card:nth-child(11){
+    animation-delay: calc(6 * var(--stagger-delay));    
+}
+.card:nth-child(15){
+    animation-delay: calc(7 * var(--stagger-delay));    
+}
+.card:nth-child(14){
+    animation-delay: calc(8 * var(--stagger-delay));   
+}
+.card:nth-child(13){
+    animation-delay: calc(9 * var(--stagger-delay));   
+}
+.card:nth-child(12){
+    animation-delay: calc(10 * var(--stagger-delay));       
+}
+.card:nth-child(9){
+    animation-delay: calc(10 * var(--stagger-delay));       
+}
+
+.card2:nth-child(1){
+    animation-delay: calc(12 * var(--stagger-delay));
+}
+.card2:nth-child(5){
+    animation-delay: calc(12 * var(--stagger-delay));    
+}
+.card2:nth-child(6){
+    animation-delay: calc(13 * var(--stagger-delay));    
+}
+.card2:nth-child(10){
+    animation-delay: calc(13 * var(--stagger-delay));    
+}
+.card2:nth-child(11){
+    animation-delay: calc(14 * var(--stagger-delay));    
+}
+.card2:nth-child(15){
+    animation-delay: calc(14 * var(--stagger-delay));    
+}
+.card2:nth-child(16){
+    animation-delay: calc(15 * var(--stagger-delay));    
+}
+.card2:nth-child(20){
+    animation-delay: calc(15 * var(--stagger-delay));   
+}
+.card2:nth-child(17){
+    animation-delay: calc(16 * var(--stagger-delay));   
+}
+.card2:nth-child(19){
+    animation-delay: calc(16 * var(--stagger-delay));       
+}
+.card2:nth-child(18){
+    animation-delay: calc(17 * var(--stagger-delay));       
+}
+.card2:nth-child(13){
+    animation-delay: calc(18 * var(--stagger-delay));       
+}
+.card2:nth-child(8){
+    animation-delay: calc(19 * var(--stagger-delay));       
+}
+
 
 @keyframes slide-out{
     from{
@@ -465,59 +616,15 @@ body{
 
 #loading-page{
     display: flex;
-    flex-direction: column;
+    position: fixed;
     justify-content: center;
     align-items: center;
-
     height: 100vh;
     width: 100vw;
-    color: white;
-    /* To remove this line of code when deploying */
-    display: none;
+    background-color: rgb(19, 17, 17);
+    z-index: 10;
+    pointer-events: none;
 }
-
-#loading-page img{
-    height: 5em;
-    margin-bottom: 20px;
-}
-
-
-
-@keyframes load-page{
-    20%{
-        opacity: 20%;
-    }
-    40%{
-        opacity: 0%;
-    }
-    60%{
-        opacity: 50%;
-    }
-    80%{
-        opacity: 0%;
-    }
-    100%{
-        opacity: 100%;
-    }
-}
-
-/* @keyframes size-up{
-    20%{
-        height: 5em;
-    }
-    40%{
-        height: 0em;
-    }
-    60%{
-        height: 7em;
-    }
-    80%{
-        height: 0em;
-    }
-    100%{
-        height: 10em;
-    }
-} */
 
 #resume-button a{
     color: white;
